full page dark mode fix

--- a/my-frontend/src/App.css
+++ b/my-frontend/src/App.css
@@ -1,16 +1,30 @@
 html, body {
-  padding: 0;
+  height: 100%;
   margin: 0;
-  }
-
-body, .App {
-  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 0;
 }
 
+body {
+  background-color: #fff;
+  color: #333;
+}
+
+.dark-mode body {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.App {
+  min-height: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 .dark-mode {
   background-color: #121212;
   color: #ffffff;
 }
+
 .dark-mode .people-table th, 
 .dark-mode .people-table td {
   border-color: #444;
